--- a/Sensei.ipynb
+++ b/Sensei.ipynb
@@ -75,16 +75,18 @@
     "            only_gates.append([ 'cx', 'cz' ])\n",
     "    \n",
     "    for d in range(depth):\n",
-    "        for q in range(num_qubits):            \n",
-    "            if num_qubits > 1:\n",
-    "                other_qubits = list(range(num_qubits))\n",
-    "                other_qubits.remove(q)\n",
+    "        for q in range(num_qubits):\n",
+    "            other_qubits = list(range(num_qubits))\n",
+    "            other_qubits.remove(q)            \n",
+    "            q2 = None\n",
+    "            q3 = None\n",
     "            \n",
+    "            if num_qubits >= 2:\n",
     "                q2 = random.choice(other_qubits)\n",
     "                other_qubits.remove(q2)\n",
+    "            if num_qubits >= 3:\n",
     "                q3 = random.choice(other_qubits)\n",
-    "                other_quibts.remove(q3)\n",
-    "                print(other_qubits)\n",
+    "                other_qubits.remove(q3)\n",
     "            \n",
     "            theta = random.uniform(0, math.pi)\n",
     "            phi = random.uniform(0, math.pi)\n",
@@ -303,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 440,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -354,7 +356,7 @@
     "                else:\n",
     "                    gate_set = ['h', 'x', 'y', 'z', 's', 't', 'sdg', 'tdg', 'cx', 'rx', 'ry', 'rz', 'cy', 'cz', 'ccx', 'u3']\n",
     "                    \n",
-    "            print(\"Stage %s: %s qubits, %s depth, %s verification level\" % (stage, num_qubits, depth, level))\n",
+    "            print(\"Stage %s: %s qubits, %s depth, verification level %s\" % (stage, num_qubits, depth, level))\n",
     "            print(\"Using gate set: %s\" % gate_set)\n",
     "            self.__hidden_circ = HiddenCircuit(num_qubits, depth=depth, gate_set=gate_set, level=level)\n",
     "            return self.__hidden_circ\n",
@@ -376,7 +378,14 @@
     "                return\n",
     "        else:\n",
     "            print(\"You must practice() first before submitting.\")\n",
-    "            return"
+    "            return\n",
+    "        \n",
+    "    def _test_all():\n",
+    "        # Test all levels\n",
+    "        sensei = Sensei(42)\n",
+    "        for i in range(125):\n",
+    "            hc = sensei.practice()\n",
+    "            sensei.submit(sensei.__dict__['_Sensei__hidden_circ'].__dict__['_HiddenCircuit__random_circ'])"
    ]
   },
   {
