Remove redundant verification level; Fix seed

--- a/Sensei.ipynb
+++ b/Sensei.ipynb
@@ -45,7 +45,7 @@
     {
      "data": {
       "text/html": [
-       "<h3>Version Information</h3><table><tr><th>Qiskit Software</th><th>Version</th></tr><tr><td>Qiskit</td><td>0.19.1</td></tr><tr><td>Terra</td><td>0.14.1</td></tr><tr><td>Aer</td><td>0.5.1</td></tr><tr><td>Ignis</td><td>0.3.0</td></tr><tr><td>Aqua</td><td>0.7.0</td></tr><tr><td>IBM Q Provider</td><td>0.7.0</td></tr><tr><th>System information</th></tr><tr><td>Python</td><td>3.8.1 (tags/v3.8.1:1b293b6, Dec 18 2019, 23:11:46) [MSC v.1916 64 bit (AMD64)]</td></tr><tr><td>OS</td><td>Windows</td></tr><tr><td>CPUs</td><td>6</td></tr><tr><td>Memory (Gb)</td><td>15.90243148803711</td></tr><tr><td colspan='2'>Tue May 12 23:16:48 2020 Pacific Daylight Time</td></tr></table>"
+       "<h3>Version Information</h3><table><tr><th>Qiskit Software</th><th>Version</th></tr><tr><td>Qiskit</td><td>0.19.1</td></tr><tr><td>Terra</td><td>0.14.1</td></tr><tr><td>Aer</td><td>0.5.1</td></tr><tr><td>Ignis</td><td>0.3.0</td></tr><tr><td>Aqua</td><td>0.7.0</td></tr><tr><td>IBM Q Provider</td><td>0.7.0</td></tr><tr><th>System information</th></tr><tr><td>Python</td><td>3.8.1 (tags/v3.8.1:1b293b6, Dec 18 2019, 23:11:46) [MSC v.1916 64 bit (AMD64)]</td></tr><tr><td>OS</td><td>Windows</td></tr><tr><td>CPUs</td><td>6</td></tr><tr><td>Memory (Gb)</td><td>15.90243148803711</td></tr><tr><td colspan='2'>Thu May 14 09:24:12 2020 Pacific Daylight Time</td></tr></table>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 307,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,7 +72,7 @@
     "    if only_gates is None:\n",
     "        only_gates = [ 'h', 'x', 'y', 'z' ]\n",
     "        if num_qubits > 1:\n",
-    "            only_gates.append([ 'cx', 'cz' ])\n",
+    "            only_gates.extend([ 'cx', 'cz' ])\n",
     "    \n",
     "    for d in range(depth):\n",
     "        for q in range(num_qubits):\n",
@@ -142,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 308,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -192,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 438,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -227,31 +227,25 @@
     "    # hellinger fidelity between the statevectors - is this the same as the next level though?\n",
     "    fidelity = [compare_statevector_fidelity(random_circ, circ)]\n",
     "    if debug:\n",
-    "        print(\"0: Hellinger fidelity between statevectors: %s\" % fidelity[0])\n",
+    "        print(\"0: Hellinger fidelity between statevectors (disergards phase): %s\" % fidelity[0])\n",
     "    \n",
-    "    # equivalency of the two statevectors disregarding phase\n",
-    "    if level >= 1:\n",
-    "        fidelity.append(compare_statevector_equiv(random_circ, circ))\n",
-    "        if debug:\n",
-    "            print(\"1: Statevector equivalency disregarding phase: %s\" % fidelity[1])\n",
-    "\n",
     "    # full statevector equality (statevectors exactly match)\n",
-    "    if level >= 2:        \n",
+    "    if level >= 1:        \n",
     "        fidelity.append(compare_statevector_with_phase(random_circ, circ))\n",
     "        if debug:\n",
-    "            print(\"2: Statevector equality including phase: %s\" % fidelity[2])\n",
+    "            print(\"1: Statevector equality including phase: %s\" % fidelity[1])\n",
     "\n",
     "    # the norm of the difference between the two circuit (matrices)\n",
-    "    if level >= 3:\n",
+    "    if level >= 2:\n",
     "        fidelity.append(compare_circuit_norm(random_circ, circ))\n",
     "        if debug:\n",
-    "            print(\"3: Norm of the difference between circuit matrices: %s\" % fidelity[3])\n",
+    "            print(\"2: Norm of the difference between circuit matrices: %s\" % fidelity[2])\n",
     "        \n",
     "    # full equivalency\n",
-    "    if level >= 4:\n",
+    "    if level >= 3:\n",
     "        fidelity.append(random_circ == circ)\n",
     "        if debug:\n",
-    "            print(\"4: Circuit equality: %s\" % fidelity[1])\n",
+    "            print(\"3: Circuit equality: %s\" % fidelity[3])\n",
     "    \n",
     "    total_fidelity = np.mean(fidelity)\n",
     "    \n",
@@ -271,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 439,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -305,63 +299,68 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 146,
    "metadata": {},
    "outputs": [],
    "source": [
     "class Sensei:\n",
-    "    def __init__(self, seed, gate_set=None):\n",
-    "        random.seed(seed)\n",
-    "        self.__stage = 0\n",
+    "    def __init__(self, seed, stage=0, gate_set=None):\n",
+    "        self.__seed = seed\n",
+    "        self.__stage = stage\n",
     "        self.__hidden_circ = None\n",
     "        self.__gate_set = gate_set\n",
-    "        print(\"Welcome to the dojo. You have chosen a practice governed by the number '%s'\\n\" % seed)\n",
+    "        print(\"Welcome to the dojo. You have chosen a practice governed by the number '%s'\" % seed)\n",
+    "        print()\n",
     "        print(\"When you are ready to practice(), prepare to receive a hidden circuit.\")\n",
-    "        print(\"You can get_empty_circuit() in order to probe(with_circuit) and check(with_solution) the hidden circuit.\")\n",
-    "        print(\"submit(with_solution) back to me when you are ready to move to the next stage.\")\n",
+    "        print()\n",
+    "        print(\"You can get_empty_circuit() in order to probe(with_circuit) the hidden circuit.\")\n",
+    "        print(\"You can check(with_solution) the hidden circuit.\")\n",
+    "        print()\n",
+    "        print(\"When you are ready to move to the next stage submit(with_solution) back to me.\")\n",
     "        \n",
     "    def practice(self):\n",
     "        if self.__hidden_circ is None:\n",
     "            stage = self.__stage\n",
     "            # epochs increase with qubit first, then verification levels, and then depth\n",
-    "            levels_per_depth = 5\n",
+    "            levels_per_depth = 4\n",
     "            depths_per_epoch = 5\n",
     "            stages_per_epoch = depths_per_epoch * levels_per_depth\n",
     "            epoch = math.floor(stage / stages_per_epoch)\n",
     "            num_qubits = math.floor(stage / stages_per_epoch) + 1\n",
     "            level = stage % levels_per_depth\n",
-    "            depth = math.floor((stage % stages_per_epoch) / depths_per_epoch) + 1\n",
+    "            depth = math.floor((stage % stages_per_epoch) / (depths_per_epoch - 1)) + 1\n",
     "            \n",
     "            gate_set = self.__gate_set\n",
     "            if gate_set is None:\n",
     "                # 1 qubit\n",
-    "                if stage < 15:\n",
+    "                if stage < 10:\n",
     "                    gate_set = ['h', 'x', 'y', 'z']                    \n",
-    "                elif stage < 25:\n",
+    "                elif stage < 20:\n",
     "                    gate_set = ['h', 'x', 'y', 'z', 's', 't']\n",
     "                # 2 qubits\n",
-    "                elif stage < 40:\n",
+    "                elif stage < 30:\n",
     "                    gate_set = ['h', 'x', 'y', 'z', 's', 't', 'sdg', 'tdg']\n",
-    "                elif stage < 50:\n",
+    "                elif stage < 40:\n",
     "                    gate_set = ['h', 'x', 'y', 'z', 's', 't', 'sdg', 'tdg', 'cx']\n",
     "                # 3 qubits\n",
-    "                elif stage < 75:\n",
+    "                elif stage < 50:\n",
     "                    gate_set = ['h', 'x', 'y', 'z', 's', 't', 'sdg', 'tdg', 'cx', 'rx', 'ry', 'rz']\n",
     "                # 4 qubits\n",
-    "                elif stage < 100:\n",
+    "                elif stage < 60:\n",
     "                    gate_set = ['h', 'x', 'y', 'z', 's', 't', 'sdg', 'tdg', 'cx', 'rx', 'ry', 'rz', 'cy', 'cz']\n",
     "                # 5 qubits\n",
-    "                elif stage < 115:\n",
+    "                elif stage < 80:\n",
     "                    gate_set = ['h', 'x', 'y', 'z', 's', 't', 'sdg', 'tdg', 'cx', 'rx', 'ry', 'rz', 'cy', 'cz', 'ccx']\n",
     "                else:\n",
     "                    gate_set = ['h', 'x', 'y', 'z', 's', 't', 'sdg', 'tdg', 'cx', 'rx', 'ry', 'rz', 'cy', 'cz', 'ccx', 'u3']\n",
     "                    \n",
     "            print(\"Stage %s: %s qubits, %s depth, verification level %s\" % (stage, num_qubits, depth, level))\n",
     "            print(\"Using gate set: %s\" % gate_set)\n",
+    "            random.seed(self.__seed + stage)\n",
     "            self.__hidden_circ = HiddenCircuit(num_qubits, depth=depth, gate_set=gate_set, level=level)\n",
     "            return self.__hidden_circ\n",
     "        else:\n",
-    "            print(\"You must complete your current practice before receiving a new one.\")\n",
+    "            print(\"You must complete your current practice before receiving a new one. Receive your hidden circuit.\")\n",
     "            return self.__hidden_circ\n",
     "        \n",
     "    def submit(self, solution_circ):\n",
@@ -383,9 +382,11 @@
     "    def _test_all():\n",
     "        # Test all levels\n",
     "        sensei = Sensei(42)\n",
-    "        for i in range(125):\n",
+    "        for i in range(100):\n",
     "            hc = sensei.practice()\n",
-    "            sensei.submit(sensei.__dict__['_Sensei__hidden_circ'].__dict__['_HiddenCircuit__random_circ'])"
+    "            rc = sensei.__dict__['_Sensei__hidden_circ'].__dict__['_HiddenCircuit__random_circ']\n",
+    "            sensei.submit(rc)\n",
+    "#             print(solution)"
    ]
   },
   {
