Fixed a small typo

--- a/Sensei.ipynb
+++ b/Sensei.ipynb
@@ -227,7 +227,7 @@
     "    # hellinger fidelity between the statevectors - is this the same as the next level though?\n",
     "    fidelity = [compare_statevector_fidelity(random_circ, circ)]\n",
     "    if debug:\n",
-    "        print(\"0: Hellinger fidelity between statevectors (disergards phase): %s\" % fidelity[0])\n",
+    "        print(\"0: Hellinger fidelity between statevectors (disregards phase): %s\" % fidelity[0])\n",
     "    \n",
     "    # full statevector equality (statevectors exactly match)\n",
     "    if level >= 1:        \n",
