Print out statevector / unitary information as hints

--- a/Sensei.ipynb
+++ b/Sensei.ipynb
@@ -234,12 +234,22 @@
     "        fidelity.append(compare_statevector_with_phase(random_circ, circ))\n",
     "        if debug:\n",
     "            print(\"1: Statevector equality including phase: %s\" % fidelity[1])\n",
+    "            if not np.isclose(fidelity[1], 1.0):\n",
+    "                with np.printoptions(precision=3, suppress=True):                \n",
+    "                    print(\" current statevector: %s\" % run_statevector(circ))\n",
+    "                    print(\" target statevector: %s\" % run_statevector(random_circ))\n",
+    "#                 print(\" difference between statevectors: %s\" % (run_statevector(random_circ) - run_statevector(circ)))\n",
     "\n",
     "    # the norm of the difference between the two circuit (matrices)\n",
     "    if level >= 2:\n",
     "        fidelity.append(compare_circuit_norm(random_circ, circ))\n",
     "        if debug:\n",
     "            print(\"2: Norm of the difference between circuit matrices: %s\" % fidelity[2])\n",
+    "            if not np.isclose(fidelity[2], 1.0):\n",
+    "                with np.printoptions(precision=3, suppress=True):\n",
+    "                    print(\" current unitary:\\n %s\" % run_unitary(circ))\n",
+    "                    print(\" target unitary:\\n %s\" % run_unitary(random_circ))\n",
+    "#                     print(\" difference between matrices:\\n %s\" % (run_unitary(random_circ) - run_unitary(circ)))\n",
     "        \n",
     "    # full equivalency\n",
     "    if level >= 3:\n",
