Set to stage 18

--- a/Dojo.ipynb
+++ b/Dojo.ipynb
@@ -55,7 +55,7 @@
     }
    ],
    "source": [
-    "sensei = Sensei(42, stage=15) # this is where things get hard"
+    "sensei = Sensei(42, stage=18) # things get hard around stage 15"
    ]
   },
   {
