Refactored probe() to prepend() and append(); Changed stage ladder; Improved in-line docs; Added developer notes

--- a/Sensei.ipynb
+++ b/Sensei.ipynb
@@ -45,7 +45,7 @@
     {
      "data": {
       "text/html": [
-       "<h3>Version Information</h3><table><tr><th>Qiskit Software</th><th>Version</th></tr><tr><td>Qiskit</td><td>0.19.1</td></tr><tr><td>Terra</td><td>0.14.1</td></tr><tr><td>Aer</td><td>0.5.1</td></tr><tr><td>Ignis</td><td>0.3.0</td></tr><tr><td>Aqua</td><td>0.7.0</td></tr><tr><td>IBM Q Provider</td><td>0.7.0</td></tr><tr><th>System information</th></tr><tr><td>Python</td><td>3.8.1 (tags/v3.8.1:1b293b6, Dec 18 2019, 23:11:46) [MSC v.1916 64 bit (AMD64)]</td></tr><tr><td>OS</td><td>Windows</td></tr><tr><td>CPUs</td><td>6</td></tr><tr><td>Memory (Gb)</td><td>15.90243148803711</td></tr><tr><td colspan='2'>Thu May 14 09:24:12 2020 Pacific Daylight Time</td></tr></table>"
+       "<h3>Version Information</h3><table><tr><th>Qiskit Software</th><th>Version</th></tr><tr><td>Qiskit</td><td>0.19.1</td></tr><tr><td>Terra</td><td>0.14.1</td></tr><tr><td>Aer</td><td>0.5.1</td></tr><tr><td>Ignis</td><td>0.3.0</td></tr><tr><td>Aqua</td><td>0.7.0</td></tr><tr><td>IBM Q Provider</td><td>0.7.0</td></tr><tr><th>System information</th></tr><tr><td>Python</td><td>3.8.1 (tags/v3.8.1:1b293b6, Dec 18 2019, 23:11:46) [MSC v.1916 64 bit (AMD64)]</td></tr><tr><td>OS</td><td>Windows</td></tr><tr><td>CPUs</td><td>6</td></tr><tr><td>Memory (Gb)</td><td>15.90243148803711</td></tr><tr><td colspan='2'>Tue May 19 11:46:14 2020 Pacific Daylight Time</td></tr></table>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -192,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -220,6 +220,16 @@
     "    su = run_unitary(circ)\n",
     "    return 1 - np.tanh(np.linalg.norm(ru - su, ord=2)) # convert L2 norm to a [0-1) value\n",
     "\n",
+    "def get_verification_level_text(level):\n",
+    "    if level == 0:\n",
+    "        return \"0: Outcome probabilities must match (disregards phase)\"\n",
+    "    elif level == 1:\n",
+    "        return \"1: Statevectors must match (including phase)\"\n",
+    "    elif level == 2:\n",
+    "        return \"2: Circuit matrices must match\"\n",
+    "    elif level == 3:\n",
+    "        return \"3: Circuits must match exactly\"\n",
+    "\n",
     "def check_circuit(random_circ, circ, level=0, log=True):\n",
     "    # TODO: do we want to print each level's fidelity?\n",
     "    debug = True and log\n",
@@ -227,13 +237,13 @@
     "    # hellinger fidelity between the statevectors - is this the same as the next level though?\n",
     "    fidelity = [compare_statevector_fidelity(random_circ, circ)]\n",
     "    if debug:\n",
-    "        print(\"0: Hellinger fidelity between statevectors (disregards phase): %s\" % fidelity[0])\n",
+    "        print(\"%s: %s (Hellinger fidelity)\" % (get_verification_level_text(0), fidelity[0]))\n",
     "    \n",
     "    # full statevector equality (statevectors exactly match)\n",
     "    if level >= 1:        \n",
     "        fidelity.append(compare_statevector_with_phase(random_circ, circ))\n",
     "        if debug:\n",
-    "            print(\"1: Statevector equality including phase: %s\" % fidelity[1])\n",
+    "            print(\"%s: %s (Statevector equality)\" % (get_verification_level_text(1), fidelity[1]))\n",
     "            if not np.isclose(fidelity[1], 1.0):\n",
     "                with np.printoptions(precision=3, suppress=True):                \n",
     "                    print(\" current statevector: %s\" % run_statevector(circ))\n",
@@ -244,7 +254,7 @@
     "    if level >= 2:\n",
     "        fidelity.append(compare_circuit_norm(random_circ, circ))\n",
     "        if debug:\n",
-    "            print(\"2: Norm of the difference between circuit matrices: %s\" % fidelity[2])\n",
+    "            print(\"%s: %s (Norm of the difference between circuit matrices)\" % (get_verification_level_text(2), fidelity[2]))\n",
     "            if not np.isclose(fidelity[2], 1.0):\n",
     "                with np.printoptions(precision=3, suppress=True):\n",
     "                    print(\" current unitary:\\n %s\" % run_unitary(circ))\n",
@@ -255,14 +265,14 @@
     "    if level >= 3:\n",
     "        fidelity.append(random_circ == circ)\n",
     "        if debug:\n",
-    "            print(\"3: Circuit equality: %s\" % fidelity[3])\n",
+    "            print(\"%s: %s\" % (get_verification_level_text(3), fidelity[3]))            \n",
     "    \n",
     "    total_fidelity = np.mean(fidelity)\n",
     "    \n",
-    "    if np.isclose(total_fidelity, 1.0):\n",
+    "    if np.isclose(total_fidelity, 1.0, rtol=1e-03, atol=1e-03):\n",
     "        if log:\n",
     "            print()\n",
-    "            print(\"Congratulations, your intuition has grown stronger. Here is the circuit:\")\n",
+    "            print(\"Congratulations, your intuition has grown stronger. This was the hidden circuit:\")\n",
     "            print(random_circ)\n",
     "        return True\n",
     "    else:\n",
@@ -292,8 +302,12 @@
     "    def get_empty_circuit(self):\n",
     "        rc = self.__random_circ\n",
     "        return QuantumCircuit(rc.num_qubits, rc.num_clbits)\n",
+    "\n",
+    "    def prepend(self, append_circ, plot_fn=plot_bloch_multivector):\n",
+    "        sv = run_statevector(append_circ.combine(self.__random_circ))\n",
+    "        return plot_fn(sv)\n",
     "    \n",
-    "    def probe(self, append_circ, plot_fn=plot_bloch_multivector):\n",
+    "    def append(self, append_circ, plot_fn=plot_bloch_multivector):\n",
     "        sv = run_statevector(self.__random_circ.combine(append_circ))\n",
     "        return plot_fn(sv)\n",
     "    \n",
@@ -309,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -323,49 +337,59 @@
     "        print()\n",
     "        print(\"When you are ready to practice(), prepare to receive a hidden circuit.\")\n",
     "        print()\n",
-    "        print(\"You can get_empty_circuit() in order to probe(with_circuit) the hidden circuit.\")\n",
-    "        print(\"You can check(with_solution) the hidden circuit.\")\n",
+    "        print(\"You can get_empty_circuit() in order to probe the hidden circuit with prepend() or append().\")\n",
+    "        print(\"You can also get_empty_circuit() to replicate the hidden circuit and check() to see how close you are.\")\n",
     "        print()\n",
-    "        print(\"When you are ready to move to the next stage submit(with_solution) back to me.\")\n",
+    "        print(\"When you are ready to move to the next stage submit(replicated_circuit) back to me.\")\n",
+    "        print()\n",
     "        \n",
     "    def practice(self):\n",
     "        if self.__hidden_circ is None:\n",
     "            stage = self.__stage\n",
     "            # epochs increase with qubit first, then verification levels, and then depth\n",
-    "            levels_per_depth = 4\n",
+    "            exercises_per_depth = 3\n",
     "            depths_per_epoch = 5\n",
-    "            stages_per_epoch = depths_per_epoch * levels_per_depth\n",
+    "            stages_per_epoch = depths_per_epoch * exercises_per_depth\n",
     "            epoch = math.floor(stage / stages_per_epoch)\n",
     "            num_qubits = math.floor(stage / stages_per_epoch) + 1\n",
-    "            level = stage % levels_per_depth\n",
     "            depth = math.floor((stage % stages_per_epoch) / (depths_per_epoch - 1)) + 1\n",
+    "            level = 0\n",
     "            \n",
     "            gate_set = self.__gate_set\n",
     "            if gate_set is None:\n",
     "                # 1 qubit\n",
     "                if stage < 10:\n",
     "                    gate_set = ['h', 'x', 'y', 'z']                    \n",
-    "                elif stage < 20:\n",
+    "                    level = 0\n",
+    "                elif stage < 15:\n",
     "                    gate_set = ['h', 'x', 'y', 'z', 's', 't']\n",
+    "                    level = 1\n",
     "                # 2 qubits\n",
-    "                elif stage < 30:\n",
+    "                elif stage < 20:\n",
     "                    gate_set = ['h', 'x', 'y', 'z', 's', 't', 'sdg', 'tdg']\n",
-    "                elif stage < 40:\n",
+    "                    level = 1\n",
+    "                elif stage < 30:\n",
     "                    gate_set = ['h', 'x', 'y', 'z', 's', 't', 'sdg', 'tdg', 'cx']\n",
+    "                    level = 2\n",
     "                # 3 qubits\n",
-    "                elif stage < 50:\n",
+    "                elif stage < 45:\n",
     "                    gate_set = ['h', 'x', 'y', 'z', 's', 't', 'sdg', 'tdg', 'cx', 'rx', 'ry', 'rz']\n",
+    "                    level = 2\n",
     "                # 4 qubits\n",
     "                elif stage < 60:\n",
     "                    gate_set = ['h', 'x', 'y', 'z', 's', 't', 'sdg', 'tdg', 'cx', 'rx', 'ry', 'rz', 'cy', 'cz']\n",
+    "                    level = 2\n",
     "                # 5 qubits\n",
-    "                elif stage < 80:\n",
+    "                elif stage < 75:\n",
     "                    gate_set = ['h', 'x', 'y', 'z', 's', 't', 'sdg', 'tdg', 'cx', 'rx', 'ry', 'rz', 'cy', 'cz', 'ccx']\n",
+    "                    level = 2\n",
     "                else:\n",
     "                    gate_set = ['h', 'x', 'y', 'z', 's', 't', 'sdg', 'tdg', 'cx', 'rx', 'ry', 'rz', 'cy', 'cz', 'ccx', 'u3']\n",
+    "                    level = 3\n",
     "                    \n",
-    "            print(\"Stage %s: %s qubits, %s depth, verification level %s\" % (stage, num_qubits, depth, level))\n",
+    "            print(\"Stage %s: %s qubit(s), circuit depth %s, verification level %s\" % (stage, num_qubits, depth, level))\n",
     "            print(\"Using gate set: %s\" % gate_set)\n",
+    "            print(\"%s [must reach this to move on]\" % get_verification_level_text(level))\n",
     "            random.seed(self.__seed + stage)\n",
     "            self.__hidden_circ = HiddenCircuit(num_qubits, depth=depth, gate_set=gate_set, level=level)\n",
     "            return self.__hidden_circ\n",
@@ -396,6 +420,7 @@
     "            hc = sensei.practice()\n",
     "            rc = sensei.__dict__['_Sensei__hidden_circ'].__dict__['_HiddenCircuit__random_circ']\n",
     "            sensei.submit(rc)\n",
+    "            print()\n",
     "#             print(solution)"
    ]
   },
