Fix tolerance level for compare_statevector_with_phase

--- a/Sensei.ipynb
+++ b/Sensei.ipynb
@@ -213,7 +213,7 @@
     "def compare_statevector_with_phase(random_circ, circ):\n",
     "    rsv = run_statevector(random_circ)\n",
     "    sv = run_statevector(circ)\n",
-    "    return not (rsv - sv).any() # if diff is > 0, then this will fail\n",
+    "    return not np.any(np.abs(rsv - sv) > 1e-03) # if diff is > 0, then this will fail\n",
     "\n",
     "def compare_circuit_norm(random_circ, circ):\n",
     "    ru = run_unitary(random_circ)\n",
@@ -448,7 +448,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.1"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
