A few small tweaks

--- a/Dojo.ipynb
+++ b/Dojo.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Dojo"
+    "# Quantum Circuit Intuition Dojo"
    ]
   },
   {
@@ -33,8 +33,9 @@
    "metadata": {},
    "source": [
     "### First, choose a 'practice' by calling `Sensei(seed, stage)`. \n",
-    "The stage controls the difficulty of the level and the seed helps generate random levels.\n",
-    "To generate a different circuit with the same difficulty level, change the seed."
+    "The stage controls the starting level of difficulty and the seed controls random level generation.\n",
+    "To generate a different circuit with the same difficulty level, change the seed.\n",
+    "To compete against someone else you both can use the same seed."
    ]
   },
   {
@@ -72,7 +73,6 @@
     "This is done by calling `get_empty_circuit()`, adding your gates to this circuit, and then calling `prepend()`.\n",
     "You will see a bloch sphere indicating the final state vector computed by prepending your circuit to the hidden circuit.\n",
     "\n",
-    "\\\n",
     "If you don't add any gates, you will simply see the result of the hidden circuit."
    ]
   },
@@ -95,7 +95,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### ... you could also probe the circuit by adding some operators at the end and attempting to 'uncompute' thhe hidden circuit.\n",
+    "#### ... you could also probe the circuit by adding some operators at the end and attempting to 'uncompute' the hidden circuit.\n",
     "This can be done by calling `get_empty_circuit()`, adding your gates to this circuit, and then calling `append()`."
    ]
   },
@@ -137,7 +137,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Once you've figured out the hidden circuit, `submit()` it and then go back to `practice()` on the next stage!"
+    "### Once you've figured out the hidden circuit, `submit()` it and then go back to `practice()` on the next stage!"
    ]
   },
   {
@@ -166,7 +166,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.1"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
