Add note about plot_fn

--- a/Dojo.ipynb
+++ b/Dojo.ipynb
@@ -71,7 +71,7 @@
    "source": [
     "#### You can probe the circuit by adding some operators at the beginning to see what the circuit does for different input states. \n",
     "This is done by calling `get_empty_circuit()`, adding your gates to this circuit, and then calling `prepend()`.\n",
-    "You will see a bloch sphere indicating the final state vector computed by prepending your circuit to the hidden circuit.\n",
+    "You will see a bloch sphere indicating the final state vector computed by prepending your circuit to the hidden circuit. You can also pass a different plot function as an argument (e.g. `plot_fn=plot_state_city`)\n",
     "\n",
     "If you don't add any gates, you will simply see the result of the hidden circuit."
    ]
@@ -96,7 +96,7 @@
    "metadata": {},
    "source": [
     "#### ... you could also probe the circuit by adding some operators at the end and attempting to 'uncompute' the hidden circuit.\n",
-    "This can be done by calling `get_empty_circuit()`, adding your gates to this circuit, and then calling `append()`."
+    "This can be done by calling `get_empty_circuit()`, adding your gates to this circuit, and then calling `append()`. You can also pass a different plot function as an argument (e.g. `plot_fn=plot_state_city`)"
    ]
   },
   {
